--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
         "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.1",
         "redux": "^4.0.5",
+        "redux-devtools-extension": "^2.13.8",
         "redux-persist": "^6.0.0",
         "redux-saga": "^1.1.3",
         "timeago.js": "^4.0.2",
